# doppel

./: Cargo.toml  Cross.toml  LICENSE  README.md  build.rs
.github/workflows/: ci.yml  release.yml
assets/: index.html
crates/netscan/: Cargo.toml  oui.tsv
crates/netscan/src/: lib.rs
packaging/: doppel.service
src/: apt.rs  auth.rs  backups.rs  browse.rs  cron.rs  disks.rs  elevate.rs  fsops.rs  logs.rs  main.rs  netinfo.rs  procs.rs  pubnet.rs  remove.rs  scan.rs  server.rs  services.rs  state.rs  stats.rs  sysmon.rs  term.rs  users.rs  ws.rs  wsterm.rs
