[workspace]
members = [".", "crates/netscan"]

[package]
name = "doppel"
version = "0.2.1"
edition = "2021"
description = "Doppel — encontra e remove ficheiros duplicados com verificação byte-a-byte e UI web embebida em tempo real"
license = "MIT"

[[bin]]
name = "doppel"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
walkdir = "2"
blake3 = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
libc = "0.2"
portable-pty = "0.9.0"
netscan = { path = "crates/netscan" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
