[workspace]
members = [".", "crates/netscan"]

[package]
name = "doppel"
version = "0.3.0"
edition = "2021"
description = "Doppel — consola de host num binário: duplicados com verificação byte-a-byte, ficheiros, utilizadores, serviços, pacotes, logs, rede/geo, discos, terminal e monitorização — UI web embebida com login PAM"
license = "MIT"

[[bin]]
name = "doppel"
path = "src/main.rs"

[dependencies]
tiny_http = "0.12"
walkdir = "2"
blake3 = "1"
rayon = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
libc = "0.2"
portable-pty = "0.9.0"
netscan = { path = "crates/netscan" }

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
